# poc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.config/: .zshrc
