[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["ryomac"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.3.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
networkx = "^3.2.1"
mdformat = "^0.7.17"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 119
indent-width = 4

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]

[tool.mypy]
ignore_missing_imports = true
